Fix CORS Options preflight handling